cambios agregando archivo a Git

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-     Hola, este es mi primer mensaje en pagina web.   
+     Hola, esta es la versió que cargaremos en github.   
     </p>   
 </body>
 </html>
